@@ -62,13 +62,12 @@ sub add_methods {
 		);
 	});
 
-	$self->add_delegate($planner, 'mkdirs', sub {
-		my ($target, @mkdirs) = @_;
-		my @actions = map { new_action('mkdir', $_) } @mkdirs;
+	$self->add_delegate($planner, 'mkdir', sub {
+		my ($target, %options) = @_;
 		ExtUtils::Builder::Node->new(
 			target  => $target,
 			phony   => 1,
-			actions => \@actions,
+			actions => [ new_action('mkdir', $target, %options) ],
 		);
 	});
 
@@ -113,7 +112,7 @@ sub copy {
 
 sub mkdir {
 	my ($source, %options) = @_;
-	make_path($source, %options);
+	make_path($source, \%options);
 	return;
 }
 
@@ -177,9 +176,9 @@ Copy the executable C<$source> to C<$destination>.
 
 Manify C<$source> to C<$destination>, as section C<$section>.
 
-=item * mkdirs($target, @dirs)
+=item * mkdir($target, $dir, %options)
 
-This ensures the given directories exist.
+This ensures the given directory exist.
 
 =item * tap_harness(%options)
 
